added filters to assigned incidents for agent